force-app/main/default/objects/Invoice_Request__c/Invoice_Request__c.object-meta.xml
<CustomObject>
    <label>Invoice Request</label>
    <nameField>
        <displayFormat>IR-{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>