force-app/main/default/objects/Invoice_Request__c/fields/Cancel_Request__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Request</label>
    <type>Checkbox</type>
</CustomField>