force-app/main/default/objects/Invoice_Request__c/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer  Contact Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact for Invoice Requests</relationshipLabel>
    <relationshipName>Invoice_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>