force-app/main/default/objects/Invoice_Request__c/fields/Estimated_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_End_Date__c</fullName>
    <formula>Case (Cycle__c,

&quot;One-time&quot;, Estimated_Start_Date__c ,
&quot;Monthly&quot;,Estimated_Start_Date__c+30,
&quot;Quarterly&quot;,Estimated_Start_Date__c+90,
&quot;Semi-Annual&quot;,Estimated_Start_Date__c+180,
&quot;Annual&quot;,

IF (Month(Estimated_Start_Date__c)=2 &amp;&amp; Day(Estimated_Start_Date__c)=29,
Date(Year(Estimated_Start_Date__c)+1,2,28),
Date(Year(Estimated_Start_Date__c)+1,Month(Estimated_Start_Date__c),Day(Estimated_Start_Date__c)))-1,

null
)

/*

One-Time - Created Date
Annual - one year from today - 1 day
Quarterly - 90 days from Created Date
Semi Annual - 180 days from Created Date
Monthly - 30 days

*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated End Date</label>
    <type>Date</type>
</CustomField>