force-app/main/default/objects/Invoice_Request__c/fields/Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Amount__c</fullName>
    <label>Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>