force-app/main/default/objects/Invoice_Request__c/fields/Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount__c</fullName>
    <formula>Gross_Amount__c - Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>