force-app/main/default/objects/Invoice_Request__c/fields/Product_Description_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Product_Description_on_Invoice__c</fullName>
    <label>Product Description on Invoice</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>