force-app/main/default/objects/Invoice_Request__c/fields/VAT_Number_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>VAT_Number_Company_ID__c</fullName>
    <label>VAT Number / Company ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>